--- a/src/css/_colours.styl
+++ b/src/css/_colours.styl
@@ -1,3 +1,7 @@
 orange = #F5A623
 red = #d12028
 green = #2DC22D
+cBackground =  #D4D4D4
+color-line = #aaa
+textcolor = rgba(#000,0.85);
+textcolorSoft = rgba(textcolor,0.5);
