--- a/src/css/_typography.styl
+++ b/src/css/_typography.styl
@@ -2,28 +2,14 @@ html
   font-size 62.5%
 
 body
-  background #D4D4D4
+  background cBackground
   -webkit-font-smoothing antialiased
   -moz-osx-font-smoothing grayscale
   font-family 'Open Sans', sans-serif
   font-size 2rem
-  
-h1
-  font-family 'blanchcaps_inline', sans-serif;
-  text-align center
-  font-weight normal
-  margin 0
+  color textcolor
 
-
-
-h2,h3,h4,h5,h6
-  font-weight normal
-  font-family 'haymakerregular', sans-serif
-
-h2
-  text-align center
-  margin-top 0
-  margin-bottom 2rem
-
-h3
-  font-size 3rem
+headingChunk()
+  padding 0.4rem
+  font-weight 600
+  font-size 0.8em
