--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,65 +1,83 @@
-.order-enter {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  -webkit-transform: translateX(-120%);
-          transform: translateX(-120%);
-  max-height: 0;
-  padding: 0 !important;
-}
-.order-enter.order-enter-active {
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-  max-height: 60px;
-  padding: 2rem 0 !important;
-}
-.order-leave {
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-}
-.order-leave.order-leave-active {
-  max-height: 0;
+html,
+body,
+div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  background: transparent;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  margin: 0;
+  outline: 0;
   padding: 0;
-  -webkit-transform: translateX(120%);
-          transform: translateX(120%);
+  vertical-align: baseline;
 }
-.count-enter {
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
-}
-.count-enter.count-enter-active {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-.count-leave {
-  -webkit-transition: all 0.25s;
-  transition: all 0.25s;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-}
-.count-leave.count-leave-active {
-  -webkit-transform: translateY(-100%);
-          transform: translateY(-100%);
-}
-@font-face {
-  font-family: "haymakerregular";
-  src: url("./fonts/haymaker-webfont.eot");
-  src: url("./fonts/haymaker-webfont.eot?#iefix") format("embedded-opentype"), url("./fonts/haymaker-webfont.woff") format("woff"), url("./fonts/haymaker-webfont.ttf") format("truetype"), url("./fonts/haymaker-webfont.svg#haymakerregular") format("svg");
-  font-weight: normal;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'blanchcaps_inline';
-  src: url("./fonts/blanch_caps_inline-webfont.eot");
-  src: url("./fonts/blanch_caps_inline-webfont.eot?#iefix") format('embedded-opentype'), url("./fonts/blanch_caps_inline-webfont.woff") format('woff'), url("./fonts/blanch_caps_inline-webfont.ttf") format('truetype'), url("./fonts/blanch_caps_inline-webfont.svg#blanchcaps_inline") format('svg');
-  font-weight: normal;
-  font-style: normal;
+body {
+  line-height: 1;
 }
 article,
 aside,
@@ -69,154 +87,69 @@ figure,
 footer,
 header,
 hgroup,
+menu,
 nav,
-section,
-summary {
+section {
   display: block;
 }
-audio,
-canvas,
-video {
-  display: inline-block;
+ol,
+ul {
+  list-style: none;
 }
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-[hidden] {
-  display: none;
-}
-html {
-  font-family: sans-serif;
-  -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
-}
-a:focus {
-  outline: thin dotted;
-}
-a:active,
-a:hover {
-  outline: 0;
-}
-h1 {
-  font-size: 2em;
-}
-abbr[title] {
-  border-bottom: 1px dotted;
-}
-b,
-strong {
-  font-weight: 700;
-}
-dfn {
-  font-style: italic;
-}
-mark {
-  background: #ff0;
-  color: #000;
-}
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
-pre {
-  white-space: pre-wrap;
-  word-wrap: break-word;
-}
+blockquote,
 q {
-  quotes: 2 1C 2 1D 2 18 2 19;
+  quotes: none;
 }
-small {
-  font-size: 80%;
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
 }
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sup {
-  top: -0.5em;
-}
-sub {
-  bottom: -0.25em;
-}
-img {
-  border: 0;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-fieldset {
-  border: 1px solid #c0c0c0;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
+a {
+  background: transparent;
   font-size: 100%;
   margin: 0;
-}
-button,
-input {
-  line-height: normal;
-}
-button,
-html input[type=button],
-input[type=reset],
-input[type=submit] {
-  -webkit-appearance: button;
-  cursor: pointer;
-}
-button[disabled],
-input[disabled] {
-  cursor: default;
-}
-input[type=checkbox],
-input[type=radio] {
-  box-sizing: border-box;
   padding: 0;
+  vertical-align: baseline;
+  color: inherit;
+  text-decoration: none;
 }
-input[type=search] {
-  -webkit-appearance: textfield;
-  box-sizing: content-box;
+ins {
+  background-color: #ff9;
+  color: #000;
+  text-decoration: none;
 }
-input[type=search]::-webkit-search-cancel-button,
-input[type=search]::-webkit-search-decoration {
-  -webkit-appearance: none;
+mark {
+  background-color: #ff9;
+  color: #000;
+  font-style: italic;
+  font-weight: bold;
 }
-textarea {
-  overflow: auto;
-  vertical-align: top;
+del {
+  text-decoration: line-through;
+}
+abbr[title],
+dfn[title] {
+  border-bottom: 1px dotted;
+  cursor: help;
 }
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-body,
-figure {
-  margin: 0;
-}
-legend,
-button::-moz-focus-inner,
-input::-moz-focus-inner {
+hr {
   border: 0;
+  border-top: 1px solid #ccc;
+  display: block;
+  height: 1px;
+  margin: 1em 0;
   padding: 0;
 }
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: " ";
-  clear: both;
-  height: 0;
+input,
+select {
+  vertical-align: middle;
 }
 * {
   box-sizing: border-box;
@@ -230,417 +163,254 @@ body {
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Open Sans', sans-serif;
   font-size: 2rem;
+  color: rgba(0,0,0,0.85);
 }
-h1 {
-  font-family: 'blanchcaps_inline', sans-serif;
-  text-align: center;
-  font-weight: normal;
-  margin: 0;
-}
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: normal;
-  font-family: 'haymakerregular', sans-serif;
-}
-h2 {
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 2rem;
-}
-h3 {
-  font-size: 3rem;
-}
-header.top {
-  text-align: center;
-}
-header.top h1 {
-  font-size: 14.4rem;
-  line-height: 0.7;
+.chat-app {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
-header.top h1 .ofThe {
+.op2-chatLatest {
+  border-radius: 2px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  background: #fff;
+  margin-bottom: 1rem;
+}
+.is-primary .op2-chatLatest {
+  border-radius: 12px;
+}
+.is-primary .op2-chatLatest {
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+.op2-chatLatest-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 3rem;
-  color: #f5a623;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  background: url("images/anchor.svg") center no-repeat;
-  background-size: cover;
-  padding: 0 1rem;
+  border-bottom: 1px solid #aaa;
 }
-header.top h1 .ofThe .of {
-  padding-right: 2rem;
-  position: relative;
-  right: -0.5rem;
+.op2-chatLatest-heading {
+  padding: 0.4rem;
+  font-weight: 600;
+  font-size: 0.8em;
 }
-header.top h3 {
-  margin: 0;
-  font-size: 2rem;
-  color: #f5a623;
-  position: relative;
-  display: inline-block;
+.op2-chatLatest-label {
+  background: #ddd;
+  font-size: 1.2rem;
+  padding: 0.2rem 0.4rem;
 }
-header.top h3 span {
-  background: #fff;
-  position: relative;
-  z-index: 2;
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-header.top h3:before,
-header.top h3:after {
+.op2-chatLatest-a {
   display: block;
-  z-index: 1;
-  background: #000;
-  position: absolute;
-  width: 130%;
-  height: 1px;
-  content: '';
-  top: 5px;
-  margin-left: -15%;
 }
-header.top h3:after {
-  top: auto;
-  bottom: 7px;
+.op2-chatLatest-a-active {
+  -webkit-transform: translate(10px);
+          transform: translate(10px);
 }
-.catch-of-the-day {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  height: 90vh;
-  max-width: 1500px;
-  margin: 0 auto;
-  margin-top: 5vh;
-  -webkit-perspective: 1000;
-          perspective: 1000;
-  -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
-}
-.catch-of-the-day > * {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 4 auto;
-          flex: 1 4 auto;
-  padding: 2rem;
-  border: 1rem double #1a1a1a;
-  position: relative;
+.op2-chatView {
+  margin-left: 3rem;
   background: #fff;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-  box-shadow: 0px 5px 5px rgba(0,0,0,0.1);
-  overflow: scroll;
 }
-.catch-of-the-day > *:first-child {
-  -ms-flex-negative: 1;
-      flex-shrink: 1;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  -webkit-transform: translateX(50%) rotateY(6deg) translateX(-50%);
-          transform: translateX(50%) rotateY(6deg) translateX(-50%);
+.op2-chatView-heading {
+  padding: 0.4rem;
+  font-weight: 600;
+  font-size: 0.8em;
+  border-bottom: 1px solid #aaa;
 }
-.catch-of-the-day > *:nth-child(2) {
-  -webkit-transform: translateX(-50%) rotateY(-14deg) translateX(50%);
-          transform: translateX(-50%) rotateY(-14deg) translateX(50%);
-  border-left: 0;
-  border-right: 0;
-  min-width: 300px;
+.op2-chatView-message {
+  border-bottom: 1px solid #aaa;
 }
-.catch-of-the-day > *:last-child {
-  -ms-flex-negative: 1;
-      flex-shrink: 1;
-  -ms-flex-preferred-size: 50%;
-      flex-basis: 50%;
-  -webkit-transform: translateX(-50%) rotateY(10deg) translateX(50%) scale(1.08) translateX(24px);
-          transform: translateX(-50%) rotateY(10deg) translateX(50%) scale(1.08) translateX(24px);
-}
-input#fold:not(:checked) ~ #main .catch-of-the-day > * {
-  -webkit-transform: none;
-          transform: none;
-}
-label[for="fold"] {
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
-  text-transform: uppercase;
-  font-size: 1.3rem;
+.op2-header {
   background: #000;
   color: #fff;
-  border: 2px solid #000;
-  cursor: pointer;
-  padding: 0.5rem 1rem;
-}
-input#fold {
-  display: none;
-}
-input#fold:checked + label {
-  background: #fff;
-  color: #000;
-}
-ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-ul.order li {
-  border-bottom: 1px solid #000;
-  padding: 2rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  font-size: 1.4rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.op2-header-heading {
+  text-align: center;
+  padding: 8px 0.4rem;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  font-weight: 600;
+}
+.op2-header .avatar-container {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+  margin: 0.4rem;
+  width: 4rem;
+  height: 4rem;
+}
+.op2-chatMessage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
+  padding: 0.4rem 0;
+}
+.op2-chatMessage-meta {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  font-size: 1.2rem;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-ul.order li:hover button {
-  display: inline;
-}
-ul.order li button {
-  border: 0;
-  display: none;
-  line-height: 1;
-  padding: 0;
-}
-ul.order li.total {
   font-weight: 600;
-  border-bottom: 3px solid #000;
-  border-top: 3px double #000;
+  padding-bottom: 0.2rem;
 }
-ul.order li.unavailable {
-  text-decoration: line-through;
-  background: #f8d0d2;
+.op2-chatMessage-time {
+  color: rgba(0,0,0,0.5);
 }
-ul.order li .price {
-  font-size: 1.2rem;
+.op2-chatMessage-content {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 0.4rem;
 }
-ul.order li span.count {
-  position: relative;
-  overflow: hidden;
-  float: left;
+.op2-chatMessage-text {
+  margin-top: 0.4rem;
 }
-ul.order li span.count span {
-  display: inline-block;
+.op2-chatMessage-text-excerpt {
+  line-height: 1.4;
 }
-.order-title {
-  text-align: center;
-}
-.fish-edit {
-  margin-bottom: 20px;
-  border: 2px solid #000;
-  overflow: hidden;
+.op2-chatMessage .avatar-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 5rem;
+  margin: 0.4rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+.c-switch .content-container {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-width: 100rem;
+  margin: 0 auto;
+  padding: 20px 0.4rem;
+}
+.c-switch-user {
+  background: #fff;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border-radius: 2px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+  margin-bottom: 14px;
+}
+.is-primary .c-switch-user {
+  border-radius: 12px;
+}
+.is-primary .c-switch-user {
+  box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+}
+.c-switch-user-true {
+  background-color: #000;
+  color: #fff;
+}
+.c-switch-user-inactive {
+  pointer-events: none;
+  box-shadow: none;
+  background: rgba(0,0,0,0.2);
+  opacity: 0.75;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
-.fish-edit input,
-.fish-edit textarea,
-.fish-edit select {
-  width: 33.33%;
-  padding: 10px;
-  line-height: 1;
-  font-size: 1.2rem;
-  border: 0;
-  border-bottom: 1px solid #000;
-  border-right: 1px solid #000;
-  -webkit-appearance: none;
-     -moz-appearance: none;
-          appearance: none;
-  border-radius: 0;
-  background: #fff;
-}
-.fish-edit input:focus,
-.fish-edit textarea:focus,
-.fish-edit select:focus {
-  outline: 0;
-  background: #fef2de;
-}
-.fish-edit textarea {
-  width: 100%;
-}
-.fish-edit input:last-of-type {
-  width: 100%;
-}
-.fish-edit button {
-  width: 100%;
-  border: 0;
-}
-.list-of-fish {
-  border-top: 2px solid #000;
-  border-bottom: 1px solid #000;
-  padding-top: 5px;
-  margin-top: 2rem;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-}
-.menu-fish {
-  border-bottom: 2px solid #000;
-  border-top: 1px solid #000;
-  padding-bottom: 2rem;
-  padding-top: 2rem;
-  margin-bottom: 5px;
-  clear: both;
-  overflow: hidden;
-}
-.menu-fish p {
-  margin: 0;
-  font-size: 1.8rem;
-}
-.menu-fish .fish-name {
-  margin: 0;
+.c-switch-user-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
-.menu-fish .price {
-  font-size: 1.4rem;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-}
-.menu-fish img {
-  float: left;
-  width: 150px;
-  margin-right: 1rem;
-}
-button,
-input[type=submit] {
-  text-transform: uppercase;
-  background: none;
-  border: 1px solid #000;
+.c-switch-user-name {
   font-weight: 600;
-  font-size: 1.5rem;
-  font-family: 'Open Sans';
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-  position: relative;
-  z-index: 2;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
-button[disabled],
-input[type=submit][disabled] {
-  color: #d12028;
-  background: #fff;
-  border-color: #d12028;
-  -webkit-transform: rotate(-10deg) scale(2) translateX(50%) translateY(-50%);
-          transform: rotate(-10deg) scale(2) translateX(50%) translateY(-50%);
-}
-button[disabled]:hover,
-input[type=submit][disabled]:hover {
-  color: #d12028;
-  cursor: not-allowed;
-}
-button[disabled]:after,
-input[type=submit][disabled]:after {
-  display: none;
-}
-button:after,
-input[type=submit]:after {
-  content: '';
-  z-index: -1;
-  display: block;
-  background: #000;
-  position: absolute;
-  width: 100%;
-  height: 0%;
-  left: 0;
-  top: 0;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-button:hover,
-input[type=submit]:hover,
-button:focus,
-input[type=submit]:focus {
+.c-switch-user-role {
+  margin: 0 10px 0 0.4rem;
+  font-size: 0.8em;
+  font-weight: 600;
+  text-transform: capitalize;
   color: #fff;
-  outline: 0;
+  padding: 0.4rem;
+  border-radius: 2px;
 }
-button:hover:after,
-input[type=submit]:hover:after,
-button:focus:after,
-input[type=submit]:focus:after {
-  height: 100%;
+.is-primary .c-switch-user-role {
+  border-radius: 12px;
 }
-button.warning:after,
-input[type=submit].warning:after {
-  background: #d12028;
+.c-switch-user-role-student {
+  background-color: #f5a623;
 }
-button.success:after,
-input[type=submit].success:after {
-  background: #2dc22d;
+.c-switch-user-role-teacher {
+  background-color: #800080;
 }
-button.github,
-input[type=submit].github,
-button.facebook,
-input[type=submit].facebook,
-button.twitter,
-input[type=submit].twitter {
-  border: 0;
+.c-switch-user-notInClass {
+  background-color: rgba(0,0,0,0.8);
+  padding: 0.4rem;
+  margin: -0.4rem -0.4rem -0.4rem 0;
+  display: inline-block;
+}
+.c-switch-user .avatar-container {
+  margin: 10px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
+}
+.view-container {
   display: block;
-  margin-bottom: 2rem;
-  width: 100%;
+}
+.content-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.unreadCounter {
+  background-color: #d12028;
   color: #fff;
-  padding: 2rem;
-}
-button.github,
-input[type=submit].github {
-  background: #82d465;
-}
-button.github:after,
-input[type=submit].github:after {
-  background: #5cc437;
-}
-button.facebook,
-input[type=submit].facebook {
-  background: #3864a3;
-}
-button.facebook:after,
-input[type=submit].facebook:after {
-  background: #2d5082;
-}
-button.twitter,
-input[type=submit].twitter {
-  background: #5ea9dd;
-}
-button.twitter:after,
-input[type=submit].twitter:after {
-  background: #2c8dd0;
-}
-.store-selector {
-  background: #fff;
-  max-width: 500px;
-  margin: 50px auto;
-  padding: 2rem;
-  border: 2px solid #000;
-}
-.store-selector input,
-.store-selector button {
-  width: 100%;
-}
-.store-selector input[type="text"],
-.store-selector button[type="text"] {
+  font-weight: bold;
+  display: inline-block;
+  min-width: 2rem;
+  padding: 0.2rem 0.4rem;
+  border-radius: 1rem;
+  height: 2rem;
+  font-size: 1.4rem;
+  line-height: 1.6rem;
   text-align: center;
-  font-size: 3rem;
+}
+.avatar-container {
+  border-radius: 50%;
+  width: 5rem;
+  height: 5rem;
+  display: block;
+  overflow: hidden;
+}
+.avatar-img {
+  display: block;
+  max-width: 100%;
 }
