--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -35,3 +35,26 @@
   	display block
   	max-width 100%
    
+.user-chip
+  radius()
+  margin 2px
+  background-color #ddd
+  display inline-block
+  align-items center
+  vertical-align middle
+  padding 2px 4px
+  font-size 1.6rem
+  font-weight 600
+  
+  .avatar-container
+    circle(1.4em)
+    margin 0
+    margin-right 4px
+    display inline-block
+    vertical-align middle
+    
+
+
+//MOVE
+.c-invite-included-true
+  color red
